# bartleby

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  SPEC.md  pyproject.toml
.claude/: settings.json  ship.toml  ultraship.toml
.claude/agents/: simplify-refactor.md
.claude/hooks/: bartleby-home-sandbox.sh  guard-main-write.sh
bartleby/: __init__.py  cli.py  config.py  integrity.py  project.py  session.py  skill_runner.py
bartleby/benchmark/: __init__.py  cc_judge.py  clients.py  judging.py  progress.py  refs.py  report.py  sources.py  stores.py  summarize.py
bartleby/book/: __init__.py  main.py  sessions.py  views.py
bartleby/commands/: backfill.py  benchmark.py  config.py  embed.py  finding.py  logs.py  project.py  ready.py  scribe.py  serve.py  session.py  skill.py
bartleby/db/: audit.py  chunks.py  connection.py  schema.py  upgrades.py
bartleby/ingest/: __init__.py  caption.py  chunk.py  classify.py  docling.py  edgar.py  embed.py  images.py  ocr.py  parse.py  parsers.py  pdfplumber.py  pool.py  progress.py  resolve.py  sec2md.py  summarize.py  summary.py  text.py  writer.py
bartleby/lib/: config.py  console.py  consts.py  embeddings.py  pricing.py  quiet.py  timing.py  utils.py
bartleby/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  prompt.py  wsjpt.py
bartleby/read/: converters.py  llm.py  main.py  nlp.py  processor.py  schema.sql  sqlite.py
bartleby/ready/: __init__.py  main.py
bartleby/share/: __init__.py  import_.py  publish.py  s3.py  source.py
bartleby/skill/: README.md  SKILL.md
bartleby/skill_scripts/: _common.py  _ids.py  _tags.py  add_tag.py  assign_tag.py  delete_finding.py  delete_tag.py  describe_corpus.py  edit_finding.py  extract.py  list_documents.py  list_findings.py  merge_findings.py  merge_tags.py  probe_dates.py  read_chunks.py  read_document.py  read_finding.py  read_tags.py  rename_tag.py  save_date.py  save_finding.py  save_summary.py  scan.py  search.py  session.py  tag.py  unassign_tag.py
bartleby/web/: package.json  vite.config.js
bartleby/write/: __init__.py  agent.py  answer_agent.py  events.py  findings_schema.py  logging.py  main.py  markdown.py  memory.py  primary_agent.py  progress.py  references.py  renderer.py  search.py  search_agent.py  token_counter.py  tools.py  views.py
benchmarks/: README.md  corpus.yaml  examine.py  judge.py  judges.yaml  models.yaml  summarize_local.py
benchmarks/sources/: neada-heating-0461-image-fixture.txt  psc-order-0109-docling.txt
docs/: BENCHMARKS.md  gpu-ingest.md  pi-vm-runbook.md
docs/decisions/: GH-0002-docling-backend-stops-double-parsing-images-0001.md  GH-0003-vector-figures-shapely-proximity-merge-0001.md  GH-0014-converter-axis-split-sec2md-0001.md  GH-0032-scan-full-text-enumeration-primitive-0001.md  GH-0035-manual-tag-assignment-assign-tag-unassign-tag-0001.md  GH-0040-list-findings-read-finding-finding-read-paths-0001.md  GH-0047-help-prints-response-shape-just-flags-0001.md  GH-0051-edgar-full-submission-txt-unwrap-0001.md  GH-0056-findings-curation-delete-finding-merge-findings-0001.md  GH-0062-schema-v7-finding-provenance-sessions-model-sessions-0001.md  GH-0065-web-ui-search-reuses-skill-scripts-subprocess-0001.md  GH-0066-tags-surfaced-web-ui-0001.md  GH-0068-batch-tag-assignment-assign-tag-unassign-tag-0001.md  GH-0078-content-sniffed-file-type-resolution-0001.md  GH-0080-summary-zero-chunk-documents-image-only-summary-0001.md  GH-0087-web-ui-packaged-so-serve-works-from-0001.md  GH-0100-semi-automated-releases-tags-version-pins-minor-0001.md  GH-0104-aggregation-facet-scan-count-document-filtered-describe-0001.md  GH-0105-brief-triage-projection-four-enumeration-commands-0001.md  GH-0108-memory-off-reads-scoped-own-session-blocked-0001.md  GH-0110-web-view-delegates-read-parity-skills-home-0001.md  GH-0114-value-bearing-tags-0001.md  GH-0118-scan-sort-document-date-chronological-enumeration-0001.md  GH-0121-displayed-html-source-can-t-run-scripts-0001.md  GH-0122-web-style-standardization-design-tokens-extracted-primitives-0001.md  GH-0123-sanitize-html-markdown-against-xss-0001.md  (+179 more)
scripts/: backfill_chunk_citations.py  release.py  ultraship.py
skill/: README.md  SKILL.md
tests/: _skill_fixtures.py  conftest.py  test_backfill_chunk_citations.py  test_backfill_dates.py  test_bartleby_home.py  test_benchmark_cc_judge.py  test_benchmark_judging.py  test_benchmark_refs.py  test_benchmark_report.py  test_benchmark_sources.py  test_benchmark_stores.py  test_benchmark_summarize.py  test_chunk_markdown.py  test_chunks_chokepoint.py  test_cli_errors.py  test_config.py  test_console.py  test_db.py  test_embed.py  test_external_citations.py  test_finding_citation_links.py  test_finding_export_import.py  test_finding_read.py  test_guard_main_write.py  test_ingest_docling.py  test_ingest_edgar.py  test_ingest_images.py  test_ingest_ocr.py  test_ingest_pdfplumber.py  test_ingest_pool.py  test_ingest_text.py  test_logs.py  test_progress.py  test_project.py  test_project_verify.py  test_provenance.py  test_providers.py  test_quiet.py  test_ready.py  test_release.py  (+36 more)
web/: package.json  vite.config.js
web/src/: app.css  (+1 more)
(+137 files in other folders)
