[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bartleby"
version = "0.1.0"
description = "An AI-powered scrivener who would definitely prefer not to."
authors = [
    {name = "John West", email = "john@beebe-west.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "apsw>=3.51.0.0",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "ollama>=0.4.0",
    "openai>=1.50.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.0.0",
    "pydantic>=2.10.0",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
docling = [
    "docling>=2.0.0",
]
wsjpt = [
    "wsjpt @ git+ssh://git@github.dowjones.net/data/wsjpt.git",
]
sec2md = [
    "sec2md==0.1.22",
]

[project.scripts]
bartleby = "bartleby.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "reportlab>=4.5.1",
    "bartleby[docling]",
    "bartleby[sec2md]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["bartleby*"]
